--- a/Actividad1.html
+++ b/Actividad1.html
@@ -16,7 +16,7 @@
         <Div id="contenidos">
             <header>
                 <div id="apDiv1"><img src="img/banner.jpg" width="1000" height="168">
-                  <div id="apDiv24">OVA Para curso 204039 - Seguridad Informatica </div>
+                  <div id="apDiv24">Ingenieria Social</div>
               </div>
             </header>
         	<p>&nbsp;</p>
@@ -34,8 +34,8 @@
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
                  <ul>
-                    <li><a href="Actividad1.html" class="menu">Actividad 1</a>
-                    <li><a href="Actividad2.html" class="menu">Actividad 2</a>
+                    <li><a href="lecturas.html" class="menu">Actividad 1</a>
+                    <li><a href="lecturas.html" class="menu">Actividad 2</a>
                     <li><a href="lecturas.html" class="menu">Actividad 3</a>
                   </ul>
                 <li><a href="autores.html" class="menu">Autores</a></li>
@@ -75,15 +75,8 @@
     <h2>Diseño de Sitios Web - UNAD ECBTI</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
-                    <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
-                  	</figure>
-                    <p>
-                          Propósitos del curso:<br>
-                        •  Establecer una base de formación actualizada sobre los conceptos, procesos y métodos correctos de manejo seguro de información..<br>
-                        • Conocimiento e interpretación de las normas (nacionales e internacionales) que regulan el área de la seguridad informática como rama de la ingeniería de sistemas.<br>
-                        •  Generar proyectos en el área de la seguridad informática que permita el diseño, la implementación y la evaluación de sistemas informáticos seguros.<br>
-                    </p>
+                    <div class="video-responsive">
+  <iframe   src="quiz.htm" frameborder="0" allowfullscreen></iframe>
       			</article>
     </section>
     <aside> 
