--- a/Multimedia.html
+++ b/Multimedia.html
@@ -34,8 +34,8 @@
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
                  <ul>
-                    <li><a href="lecturas.html" class="menu">Actividad 1</a>
-                    <li><a href="lecturas.html" class="menu">Actividad 2</a>
+                     <li><a href="Actividad1.html" class="menu">Actividad 1</a>
+                    <li><a href="Actividad2.html" class="menu">Actividad 2</a>
                     <li><a href="lecturas.html" class="menu">Actividad 3</a>
                   </ul>
                 <li><a href="autores.html" class="menu">Autores</a></li>
