--- a/definiciones.html
+++ b/definiciones.html
@@ -7,7 +7,7 @@
         <meta content="Pagina de curso de Disenos de Sitios Web" name="description" />
         <meta content="EDUCACION, UNAD, INGENIERIA, SISTEMAS, DISENO, OVA, CURSO, WEB" name="keywords" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <title>SITIOS WEB</title>
+        <title>Definiciones - seguridad informatica</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
@@ -28,8 +28,8 @@
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                  <ul>
                     <li><a href="definiciones.html" class="menu">Definiciones</a>
-                    <li><a href="Estandares.html" class="menu">Estandares</a>
-                    <li><a href="Normas.html" class="menu">Normas</a>
+                    <li><a href="estandares.html" class="menu">Estandares</a>
+                    <li><a href="normas.html" class="menu">Normas</a>
                   </ul>
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
@@ -72,17 +72,12 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>Diseño de Sitios Web - UNAD ECBTI</h2>
-    <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
+    
                 <article>
-                    <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
-                  	</figure>
+                    <h2 class="subtitle">Definiciones seguridad informatica</h2>
+                    
                     <p>
-                          Propósitos del curso:<br>
-                        •  Establecer una base de formación actualizada sobre los conceptos, procesos y métodos correctos de manejo seguro de información..<br>
-                        • Conocimiento e interpretación de las normas (nacionales e internacionales) que regulan el área de la seguridad informática como rama de la ingeniería de sistemas.<br>
-                        •  Generar proyectos en el área de la seguridad informática que permita el diseño, la implementación y la evaluación de sistemas informáticos seguros.<br>
+                       Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
                     </p>
       			</article>
     </section>
