--- a/estandares.html
+++ b/estandares.html
@@ -7,7 +7,7 @@
         <meta content="Pagina de curso de Disenos de Sitios Web" name="description" />
         <meta content="EDUCACION, UNAD, INGENIERIA, SISTEMAS, DISENO, OVA, CURSO, WEB" name="keywords" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <title>SITIOS WEB</title>
+        <title>Estandares - seguridad informatica</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
@@ -28,8 +28,8 @@
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                  <ul>
                     <li><a href="definiciones.html" class="menu">Definiciones</a>
-                    <li><a href="Estandares.html" class="menu">Estandares</a>
-                    <li><a href="Normas.html" class="menu">Normas</a>
+                    <li><a href="estandares.html" class="menu">Estandares</a>
+                    <li><a href="normas.html" class="menu">Normas</a>
                   </ul>
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
@@ -72,17 +72,14 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>Diseño de Sitios Web - UNAD ECBTI</h2>
-    <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
+    
                 <article>
-                    <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
-                  	</figure>
+                    <h2 class="subtitle">Estandares seguridad informatica</h2>
                     <p>
-                          Propósitos del curso:<br>
-                        •  Establecer una base de formación actualizada sobre los conceptos, procesos y métodos correctos de manejo seguro de información..<br>
-                        • Conocimiento e interpretación de las normas (nacionales e internacionales) que regulan el área de la seguridad informática como rama de la ingeniería de sistemas.<br>
-                        •  Generar proyectos en el área de la seguridad informática que permita el diseño, la implementación y la evaluación de sistemas informáticos seguros.<br>
+                       Al contrario del pensamiento popular, el texto de Lorem Ipsum no es simplemente texto aleatorio. Tiene sus raices en una pieza cl´sica de la literatura del Latin, que data del año 45 antes de Cristo, haciendo que este adquiera mas de 2000 años de antiguedad. Richard McClintock, un profesor de Latin de la Universidad de Hampden-Sydney en Virginia, encontró una de las palabras más oscuras de la lengua del latín, "consecteur", en un pasaje de Lorem Ipsum, y al seguir leyendo distintos textos del latín, descubrió la fuente indudable. Lorem Ipsum viene de las secciones 1.10.32 y 1.10.33 de "de Finnibus Bonorum et Malorum" (Los Extremos del Bien y El Mal) por Cicero, escrito en el año 45 antes de Cristo. Este libro es un tratado de teoría de éticas, muy popular durante el Renacimiento. La primera linea del Lorem Ipsum, "Lorem ipsum dolor sit amet..", viene de una linea en la sección 1.10.32.
+                    </p>
+                    <p>
+                       El trozo de texto estándar de Lorem Ipsum usado desde el año 1500 es reproducido debajo para aquellos interesados. Las secciones 1.10.32 y 1.10.33 de "de Finibus Bonorum et Malorum" por Cicero son también reproducidas en su forma original exacta, acompañadas por versiones en Inglés de la traducción realizada en 1914 por H. Rackham.
                     </p>
       			</article>
     </section>
