--- a/Actividad2.html
+++ b/Actividad2.html
@@ -7,7 +7,7 @@
         <meta content="Pagina de curso de Disenos de Sitios Web" name="description" />
         <meta content="EDUCACION, UNAD, INGENIERIA, SISTEMAS, DISENO, OVA, CURSO, WEB" name="keywords" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <title>SITIOS WEB</title>
+        <title>Actividad2</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
@@ -27,16 +27,16 @@
                 <li><a href="index.html" class="menu">Inicio</a></li>
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                  <ul>
-                    <li><a href="lecturas.html" class="menu">Definiciones</a>
-                    <li><a href="lecturas.html" class="menu">Estandares</a>
-                    <li><a href="lecturas.html" class="menu">Normas</a>
+                    <li><a href="definiciones.html" class="menu">Definiciones</a>
+                    <li><a href="Estandares.html" class="menu">Estandares</a>
+                    <li><a href="Normas.html" class="menu">Normas</a>
                   </ul>
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
                  <ul>
                     <li><a href="Actividad1.html" class="menu">Actividad 1</a>
                     <li><a href="Actividad2.html" class="menu">Actividad 2</a>
-                    <li><a href="lecturas.html" class="menu">Actividad 3</a>
+                    <li><a href="Actividad3.html" class="menu">Actividad 3</a>
                   </ul>
                 <li><a href="autores.html" class="menu">Autores</a></li>
                 <div id="apDiv19">
