--- a/definiciones.html
+++ b/definiciones.html
@@ -36,7 +36,7 @@
                  <ul>
                     <li><a href="Actividad1.html" class="menu">Actividad 1</a>
                     <li><a href="Actividad2.html" class="menu">Actividad 2</a>
-                    <li><a href="lecturas.html" class="menu">Actividad 3</a>
+                    <li><a href="Actividad3.html" class="menu">Actividad 3</a>
                   </ul>
                 <li><a href="autores.html" class="menu">Autores</a></li>
                 <div id="apDiv19">
