--- a/Multimedia.html
+++ b/Multimedia.html
@@ -16,7 +16,7 @@
         <Div id="contenidos">
             <header>
                 <div id="apDiv1"><img src="img/banner.jpg" width="1000" height="168">
-                  <div id="apDiv24">Ingenieria Social</div>
+                  <div id="apDiv24">OVA Para curso 204039 - Seguridad Informatica</div>
               </div>
             </header>
         	<p>&nbsp;</p>
@@ -27,16 +27,16 @@
                 <li><a href="index.html" class="menu">Inicio</a></li>
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                  <ul>
-                    <li><a href="lecturas.html" class="menu">Definiciones</a>
-                    <li><a href="lecturas.html" class="menu">Estandares</a>
-                    <li><a href="lecturas.html" class="menu">Normas</a>
+                    < <li><a href="definiciones.html" class="menu">Definiciones</a>
+                    <li><a href="Estandares.html" class="menu">Estandares</a>
+                    <li><a href="Normas.html" class="menu">Normas</a>
                   </ul>
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
                  <ul>
-                     <li><a href="Actividad1.html" class="menu">Actividad 1</a>
+                    <li><a href="Actividad1.html" class="menu">Actividad 1</a>
                     <li><a href="Actividad2.html" class="menu">Actividad 2</a>
-                    <li><a href="lecturas.html" class="menu">Actividad 3</a>
+                    <li><a href="Actividad3.html" class="menu">Actividad 3</a>
                   </ul>
                 <li><a href="autores.html" class="menu">Autores</a></li>
                 <div id="apDiv19">
