--- a/autores.html
+++ b/autores.html
@@ -27,7 +27,7 @@
                 <li><a href="index.html" class="menu">Inicio</a></li>
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                  <ul>
-                     <li><a href="definiciones.html" class="menu">Definiciones</a>
+                    <li><a href="definiciones.html" class="menu">Definiciones</a>
                     <li><a href="Estandares.html" class="menu">Estandares</a>
                     <li><a href="Normas.html" class="menu">Normas</a>
                   </ul>
@@ -75,8 +75,15 @@
     <h2>Diseño de Sitios Web - UNAD ECBTI</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
-                    <div class="video-responsive">
-  <iframe   src="https://www.youtube.com/embed/I5d8zQ0PASY" frameborder="0" allowfullscreen></iframe>
+                    <figure>
+                        <img src="img/diseno_web.jpg" alt="Diseno">
+                  	</figure>
+                    <p>
+                          Propósitos del curso:<br>
+                        •  Establecer una base de formación actualizada sobre los conceptos, procesos y métodos correctos de manejo seguro de información..<br>
+                        • Conocimiento e interpretación de las normas (nacionales e internacionales) que regulan el área de la seguridad informática como rama de la ingeniería de sistemas.<br>
+                        •  Generar proyectos en el área de la seguridad informática que permita el diseño, la implementación y la evaluación de sistemas informáticos seguros.<br>
+                    </p>
       			</article>
     </section>
     <aside> 
