--- a/Multimedia.html
+++ b/Multimedia.html
@@ -7,7 +7,7 @@
         <meta content="Pagina de curso de Disenos de Sitios Web" name="description" />
         <meta content="EDUCACION, UNAD, INGENIERIA, SISTEMAS, DISENO, OVA, CURSO, WEB" name="keywords" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <title>Autores</title>
+        <title>SITIOS WEB</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
@@ -72,36 +72,12 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>Autores</h2>
+    <h2>Diseño de Sitios Web - UNAD ECBTI</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
-                    <figure>
-                        <img src="img/AndresB.png" alt="Diseno">
-                  	</figure>
-                    <p>
-                          Andres Felipe Botero<br>
-                        • Afboterom.<br>
-                        •  Codigo: 15445555.<br>
-                        •  Correo: andrespipe28@hotmail.com.<br>
-                        •  Programa: Ingeniera de sistemas.<br>
-                        •  Usuario Skype: andrespipe28.<br>
-                    </p>
+                    <div class="video-responsive">
+            <iframe   src="https://www.youtube.com/embed/I5d8zQ0PASY" frameborder="0" allowfullscreen></iframe>
       			</article>
-
-            <article>
-                    <figure>
-                        <img src="img/AndresB.png" alt="Diseno">
-                    </figure>
-                    <p>
-                          Jhon Jairo Ramirez<br>
-                        • xxxx.<br>
-                        •  Codigo: .<br>
-                        •  Correo: jjramirezpe@unadvirtual.edu.co.<br>
-                        •  Programa: Ingeniera de sistemas.<br>
-                        •  Usuario Skype: jhonjairor34.<br>
-                    </p>
-                    </p>
-            </article>
     </section>
     <aside> 
                 <div id="apDiv5">
