--- a/Multimedia.html
+++ b/Multimedia.html
@@ -28,10 +28,10 @@
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                  <ul>
                     <li><a href="definiciones.html" class="menu">Definiciones</a>
-                    <li><a href="Estandares.html" class="menu">Estandares</a>
-                    <li><a href="Normas.html" class="menu">Normas</a>
+                    <li><a href="estandares.html" class="menu">Estandares</a>
+                    <li><a href="normas.html" class="menu">Normas</a>
                   </ul>
-                <li><a href="multimedia.html" class="menu">Multimedia</a></li>
+                <li><a href="Multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
                  <ul>
                     <li><a href="Actividad1.html" class="menu">Actividad 1</a>
