--- a/definiciones.html
+++ b/definiciones.html
@@ -31,7 +31,7 @@
                     <li><a href="estandares.html" class="menu">Estandares</a>
                     <li><a href="normas.html" class="menu">Normas</a>
                   </ul>
-                <li><a href="multimedia.html" class="menu">Multimedia</a></li>
+                <li><a href="Multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
                  <ul>
                     <li><a href="Actividad1.html" class="menu">Actividad 1</a>
