--- a/autores.html
+++ b/autores.html
@@ -79,8 +79,7 @@
                         <img src="img/AndresB.png" alt="Diseno">
                   	</figure>
                     <p>
-                          Andres Felipe Botero<br>
-                        • Afboterom.<br>
+                          Andres Felipe Botero  (Afboterom)<br>
                         •  Codigo: 15445555.<br>
                         •  Correo: andrespipe28@hotmail.com.<br>
                         •  Programa: Ingeniera de sistemas.<br>
@@ -93,8 +92,7 @@
                         <img src="img/AndresB.png" alt="Diseno">
                     </figure>
                     <p>
-                          Jhon Jairo Ramirez<br>
-                        • xxxx.<br>
+                          Jhon Jairo Ramirez (xxxxx)<br>
                         •  Codigo: .<br>
                         •  Correo: jjramirezpe@unadvirtual.edu.co.<br>
                         •  Programa: Ingeniera de sistemas.<br>
