Definiciones seguridad informatica:  definiciones.html
Anexo informacion sobre definiciones seguridad informatica

--- a/definiciones.html
+++ b/definiciones.html
@@ -75,10 +75,21 @@
     
                 <article>
                     <h2 class="subtitle">Definiciones seguridad informatica</h2>
-                    
-                    <p>
-                       Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
+                    <p >
+                      Es una rama de la seguridad de la informaciòn que trata de proteger la informaciòn que utiliza una infraestructura informatica y de telecomunicaciones para ser almacenada o transmitida. Se pueden distinguir los siguientes tipos:
                     </p>
+                    <p class="resaltado">En funcion de lo que se quiere proteger:</p>
+                    <ul class="item">
+                        <li><span class="resaltado">Seguridad fisica:</span> se asocia a la protección física del sistema ante amenazas como inundaciones, incendios, robos, etc.</li>
+                        <li><span class="resaltado">Seguridad lógica:</span> mecanismos que protegen la parte lógica de un sistema informático (datos, aplicaciones y sistemas operativos). Uno de los medios más utilizados es la criptografía.</li>    
+                    </ul>
+                    <p class="resaltado">En función del momento en que tiene lugar la protección:</p>
+                    <ul class="item">
+                        <li><span class="resaltado">Seguridad activa:</span> se encarga de prevenir, detectar y evitar cualquier incidente en los sistemas informáticos antes de que se produzca (medidas preventivas). Por ejemplo, utilización de contraseñas. </li>
+                        <li><span class="resaltado">Seguridad pasiva:</span> comprende todas aquellas técnicas o procedimientos necesarios para minimizar las consecuencias de un incidente de seguridad (medidas correctoras). Por ejemplo, las copias de seguridad.</li>
+                    </ul>
+                    <p>Fuente: Escrivá, G. G., Romero, S. R. M., & Ramada, D. J. (2013). Seguridad informática.
+Madrid, ES: Macmillan Iberia, S.A..</p>
       			</article>
     </section>
     <aside> 
