--- a/estandares.html
+++ b/estandares.html
@@ -78,22 +78,22 @@
                     <p>
                        Los estándares de seguridad son una herramienta que apoya la gestión de la seguridad informática, ya que los ambientes cada vez más complejos requieren de modelos que administren las tecnologías de manera integral. </p>
 
-                    <p class="resaltado">Algunos de ellos son:</p>
-                  
-                    <p class="resaltado">Trusted Computer Security Evaluation Criteria. TCSEC. </p>
-                    <p
-                       class="resaltado">ISO 15408 Criterios Comunes (CC)
-                    </p>
-                    <p>
-                    El principal objetivo es poner de acuerdo a clientes, desarrolladores y testers sobre qué requisitos de seguridad cumple un determinado producto.
-                    </p>
-                     <p class="resaltado">                   ISO 27000
-                    </p>
-                    <p>
-               un conjunto de estándares desarrollados -o en fase de desarrollo- International Organization for Standardization e International Electrotechnical Commission, que proporcionan un marco de gestión de la seguridad de la información utilizable por cualquier tipo de organización.
-                    </p>
 
- <p>Fuente: Redyseguridad.fi-p.unam.mx. Retrieved 22 October 2016, from http://redyseguridad.fi-p.unam.mx/proyectos/seguridad/ISO27.php.</p>
+                       <p class="resaltado">Algunos de ellos son:</p>
+                    <ul class="item">
+                        <li><span class="resaltado">Trusted Computer Security Evaluation Criteria. TCSEC:</span> e definen siete conjuntos de criterios de evaluación denominados clases (D, C1, C2, B1, B2, B3 y A1). Cada clase de criterios cubre cuatro aspectos de la evaluación: política de seguridad, imputabilidad, aseguramiento y documentación. Los criterios correspondientes a estas cuatro áreas van ganando en detalle de una clase a otra, constituyendo una jerarquía en la que D es el nivel más bajo y A1 él más elevado. Todas las clases incluyen requisitos tanto de funcionalidad como de confianza.</li>
+                        <li><span class="resaltado">ISO 15408 Criterios Comunes:</span>  Tambien conocida como "Common Criteria" o CC, es una norma de certificación reconocida internacionalmente para certificar los procesos de implementación, especificación, desarrollo y evaluación en productos de seguridad informática.  </li> 
+                         <li><span class="resaltado"> ISO 27000:</span>  s un conjunto de estándares desarrollados -o en fase de desarrollo- por ISO (International Organization for Standardization) e IEC (International Electrotechnical Commission), que proporcionan un marco de gestión de la seguridad de la información utilizable por cualquier tipo de organización, pública o privada, grande o pequeña.</li>  
+                           <li>  A semejanza de otras normas ISO, la 27000 es realmente una serie de estándares.
+
+
+ISO 27000: En fase de desarrollo. Contendrá términos y definiciones que se emplean en toda la serie 27000. La aplicación de cualquier estándar necesita de un vocabulario claramente definido, que evite distintas interpretaciones de conceptos técnicos y de gestión. Esta norma será gratuita, a diferencia de las demás de la serie, que tendrán un coste.
+ISO 27001: Es la norma principal de requisitos del sistema de gestión de seguridad de la información. Tiene su origen en la BS 7799-2:2002 y es la norma con arreglo a la cual se certifican por auditores externos los SGSI de las organizaciones. </li> 
+
+<li><span class="resaltado">Nota: ISO 27000 es considerado ademas de estandar el modelo de norma por lo cual se ampliara su informacion en el apartad de normas</span>    </li> 
+                    
+
+ Fuente: Redyseguridad.fi-p.unam.mx. Retrieved 22 October 2016, from http://redyseguridad.fi-p.unam.mx/proyectos/seguridad/ISO27.php.</p>
 
       			</article>
     </section>
