cambios style.css y autores.html

--- a/autores.html
+++ b/autores.html
@@ -72,14 +72,14 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>Autores</h2>
+    <h2 class="subtitle">Autores</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
-                        <img src="img/AndresB.png" alt="Diseno">
+                        <img class="autores" src="img/AndresB.png" alt="Diseno">
                   	</figure>
-                    <p>
-                          Andres Felipe Botero  (Afboterom)<br>
+                    <p class="texto-autores">
+                          <span class="resaltado">Andres Felipe Botero  (Afboterom)<br></span>
                         •  Codigo: 15445555.<br>
                         •  Correo: andrespipe28@hotmail.com.<br>
                         •  Programa: Ingeniera de sistemas.<br>
@@ -89,10 +89,10 @@
 
             <article>
                     <figure>
-                        <img src="img/AndresB.png" alt="Diseno">
+                        <img class="autores" src="img/john.jpeg" alt="Diseno" width="140px" height="120px">
                     </figure>
-                    <p>
-                          Jhon Jairo Ramirez (xxxxx)<br>
+                    <p class="texto-autores">
+                          <span class="resaltado">Jhon Jairo Ramirez (xxxxx)<br></span>
                         •  Codigo: .<br>
                         •  Correo: jjramirezpe@unadvirtual.edu.co.<br>
                         •  Programa: Ingeniera de sistemas.<br>
