se agrega id de Jhon
se agrega id de Jhon

--- a/autores.html
+++ b/autores.html
@@ -93,7 +93,7 @@
                     </figure>
                     <p class="texto-autores">
                           <span class="resaltado">Jhon Jairo Ramirez (xxxxx)<br></span>
-                        •  Codigo: .<br>
+                        •  Codigo:71212161 .<br>
                         •  Correo: jjramirezpe@unadvirtual.edu.co.<br>
                         •  Programa: Ingeniera de sistemas.<br>
                         •  Usuario Skype: jhonjairor34.<br>
